# voxmind

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
voxmind/app_interfaces/: command_performer.py  command_source.py  llm_module.py  topic_definer.py
voxmind/app_utils/: settings.py  utils.py
voxmind/assistant_core/: command_recognizer.py  context.py
voxmind/base_commands/: get_current_os.py  get_current_time.py  llm_question.py
voxmind/commands_sources/: cli_command_source.py
voxmind/commands_sources/local_voice_command_source/: command_source.py  stt_module.py
voxmind/commands_sources/voice_command_source/: command_source.py
voxmind/commands_sources/web_voice_command_source/: command_source.py  simple_web.py
voxmind/commands_sources/web_voice_command_source/webapi_client/: index.html  index.js
voxmind/llm_clients/: gigachat_client.py
voxmind/topic_definers/: llm_based.py  plain.py
